# kev-monitor

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
src/: config.rs  investigate.rs  knowledge.rs  lib.rs  main.rs  platform.rs
src/collector/: hash.rs  mod.rs  network.rs  process.rs  signature.rs  version.rs
src/engine/: mod.rs  rules.rs  score.rs
src/model/: mod.rs
src/monitor/: mod.rs  tui.rs
src/reputation/: mod.rs
src/store/: mod.rs  queries.rs  schema.rs
tests/: signature.rs
