[package]
name = "kev"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "kev — a live Windows process-legitimacy monitor: verify every running process (Authenticode, publisher trust, masquerade heuristics, optional VirusTotal) and act on it."
license = "MIT"
repository = "https://github.com/loughraieb/kev-monitor"
readme = "README.md"
keywords = ["security", "windows", "process", "authenticode", "malware"]
categories = ["command-line-utilities"]

[dependencies]
sysinfo = "0.39.3"
sha2 = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rusqlite = { version = "0.40.0", features = ["bundled"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
netstat2 = "0.11.2"
toml = "1.1.2"
ratatui = "0.30.0"
tracing-appender = "0.2.5"
ureq = { version = "2", optional = true }

[features]
default = []
# VirusTotal reputation lookups for the untrusted/unknown tail (sends only file hashes).
reputation = ["dep:ureq"]

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Security_WinTrust",       # WinVerifyTrust, WINTRUST_DATA/_FILE_INFO/_CATALOG_INFO, WTD_*, action GUID
    "Win32_Security_Cryptography",   # CertGetNameStringW + cert types (publisher extraction)
    "Win32_Security_Cryptography_Catalog", # CryptCATAdmin* (catalog-signed system binaries)
    "Win32_Security_Cryptography_Sip", # CRYPT_PROVIDER_DATA + WTHelper* (signer from trust state)
    "Win32_Foundation",              # HWND, HANDLE, TRUST_E_*/CERT_E_* consts
    "Win32_Security",                # OpenProcessToken/GetTokenInformation (elevation + integrity)
    "Win32_System_Threading",        # GetCurrentProcess/OpenProcess
    "Win32_Storage_FileSystem",      # GetFileVersionInfoW/VerQueryValueW (FileDescription)
    "Win32_UI_Shell",                # ShellExecuteW (self-elevating launcher)
    "Win32_UI_WindowsAndMessaging",  # SHOW_WINDOW_CMD / SW_SHOWNORMAL
    # Phase 6 only: "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock"
]
